[project]
name = "pulsar-mcp-server"
version = "0.1.0"
description = "A Pulsar MCP Server"
readme = "README.md"
dependencies = [
    "mcp>=1.1.0,<2.0",
    "pulsar-client>=3.4.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "typing-extensions>=4.0.0",
]
license = { text = "MIT" }
keywords = ["pulsar", "mcp", "server"]

requires-python = ">=3.12"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/germain-d/pulsar-mcp-server"
Issues = "https://github.com/germain-d/pulsar-mcp-server/issues"

[[project.authors]]
name = "Your Name"
email = "your.email@example.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pulsar-mcp-server = "pulsar_mcp_server:main" 